--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ scikit-learn==1.0.2
 PyYAML==6.0
 Pillow==9.1.0
 numpy==1.21.5
-opencv-python==4.4.0.46
+opencv-python
 imageio==2.18.0
 ffmpeg-python==0.2.0
 av==10.0.0
