--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 yacs
-scipy==1.7.3
-scikit-image==0.19.3
-scikit-learn==1.0.2
-PyYAML==6.0
-Pillow==9.1.0
-numpy==1.21.5
+scipy
+scikit-image
+scikit-learn
+PyYAML
+Pillow
+numpy
 opencv-python
-imageio==2.18.0
-ffmpeg-python==0.2.0
+imageio
+ffmpeg-python
 av==10.0.0
